--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -4,10 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import ru.nucodelabs.gem.view.control.chart.*?>
+<?import ru.nucodelabs.gem.view.control.Placeholder?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="ru.nucodelabs.gem.view.controller.anisotropy.main.AnisotropyMainViewController"
-      maxHeight="Infinity" maxWidth="Infinity" stylesheets="@../../../common.css, @../../charts/MapPseudoSection.css"
+      maxHeight="Infinity" maxWidth="Infinity" stylesheets="@../../../common.css, @AnisotropyMainView.css"
       prefWidth="1280"
       prefHeight="720"
       fx:id="root">
@@ -16,66 +17,76 @@
             <MenuItem text="%openProject" onAction="#loadProject"/>
             <MenuItem text="%saveProject" onAction="#saveProject"/>
         </Menu>
+        <Menu text="Азимут">
+            <MenuItem text="Редактировать"/>
+        </Menu>
     </MenuBar>
     <TabPane VBox.vgrow="ALWAYS" maxHeight="Infinity">
         <Tab text="Сигналы" closable="false">
-            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity"
-                       VBox.vgrow="ALWAYS" fx:id="Split1">
-
-                <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity" maxWidth="Infinity"
-                           VBox.vgrow="ALWAYS" fx:id="Split2">
-                    <VBox alignment="BOTTOM_CENTER">
-                        <HBox alignment="BASELINE_RIGHT">
-                            <VBox alignment="TOP_CENTER">
-                                <Label alignment="TOP_CENTER" text="Широта"/>
-                                <TextField fx:id="Text1" alignment="TOP_CENTER" promptText="Широта" maxWidth="100"/>
+            <VBox maxHeight="Infinity" VBox.vgrow="ALWAYS">
+                <HBox maxWidth="Infinity" VBox.vgrow="ALWAYS">
+                    <VBox maxWidth="Infinity" HBox.hgrow="ALWAYS">
+                        <Label styleClass="chart-label">Карта</Label>
+                        <HBox>
+                            <VBox spacing="5" style="-fx-padding: 20;">
+                                <Label styleClass="uc-header">Координаты центра установки</Label>
+                                <Label>Ширина</Label>
+                                <TextField/>
+                                <Label>Долгота</Label>
+                                <TextField/>
+                                <Button>Применить</Button>
+                                <Label styleClass="uc-header">Параметры наложения</Label>
+                                <ComboBox/>
                             </VBox>
-                            <VBox alignment="TOP_CENTER">
-                                <Label alignment="TOP_CENTER" text="Долгота"/>
-                                <TextField fx:id="Text2" alignment="TOP_CENTER" promptText="Долгота" maxWidth="100"/>
-                            </VBox>
+                            <ImageScatterChart fx:id="signalsMap" legendVisible="false">
+                                <xAxis>
+                                    <NucodeNumberAxis autoRanging="true"/>
+                                </xAxis>
+                                <yAxis>
+                                    <NucodeNumberAxis autoRanging="true"/>
+                                </yAxis>
+                            </ImageScatterChart>
                         </HBox>
-                        <ImageScatterChart fx:id="mapChart">
+                    </VBox>
+                    <VBox HBox.hgrow="ALWAYS" maxWidth="Infinity">
+                        <Label styleClass="chart-label">Отношения сигналов</Label>
+                        <LineChart legendVisible="false">
                             <xAxis>
                                 <NumberAxis/>
                             </xAxis>
                             <yAxis>
                                 <NumberAxis/>
                             </yAxis>
-                        </ImageScatterChart>
+                        </LineChart>
                     </VBox>
-
-                    <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
-                        <TableView fx:id="table2" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS"
-                                   editable="true">
+                </HBox>
+                <HBox maxWidth="Infinity">
+                    <VBox HBox.hgrow="ALWAYS" maxWidth="Infinity">
+                        <Label styleClass="chart-label">Кривые ВЭЗ</Label>
+                        <LineChart legendVisible="false" maxWidth="Infinity" HBox.hgrow="ALWAYS">
+                            <xAxis>
+                                <NumberAxis/>
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis/>
+                            </yAxis>
+                        </LineChart>
+                    </VBox>
+                    <VBox HBox.hgrow="ALWAYS" maxWidth="Infinity">
+                        <Label styleClass="chart-label">Сигналы</Label>
+                        <TableView HBox.hgrow="ALWAYS" maxWidth="Infinity">
                             <columns>
-                                <TableColumn maxWidth="35" prefWidth="35" sortable="false" text="№"
-                                             styleClass="centered-column"
-                                             resizable="false" editable="false" fx:id="indexColq"/>
-                                <TableColumn fx:id="ab2Colq" sortable="false">
+                                <TableColumn fx:id="isHiddenCol" sortable="false" maxWidth="35" prefWidth="35"
+                                             minWidth="35"
+                                             resizable="false">
+                                    <graphic>
+                                        <Label text="    ">
+                                            <tooltip>
+                                                <Tooltip text="%effectivePoints"/>
+                                            </tooltip>
+                                        </Label>
+                                    </graphic>
                                 </TableColumn>
-                            </columns>
-                        </TableView>
-                        <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
-                               style="-fx-text-fill: Gray" text="График с отношениями сигналов друг к другу"/>
-                        <ScatterChart fx:id="chart2" maxWidth="800" maxHeight="400">
-                            <xAxis>
-                                <NucodeNumberAxis autoRanging="false"/>
-                            </xAxis>
-                            <yAxis>
-                                <NucodeNumberAxis autoRanging="false"/>
-                            </yAxis>
-                        </ScatterChart>
-                    </VBox>
-                </SplitPane>
-
-
-                <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
-                    <SplitPane orientation="VERTICAL" maxHeight="Infinity" maxWidth="Infinity"
-                               VBox.vgrow="ALWAYS" fx:id="Split3">
-                        <TableView fx:id="table3" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS"
-                                   editable="true">
-                            <columns>
                                 <TableColumn maxWidth="35" prefWidth="35" sortable="false" text="№"
                                              styleClass="centered-column"
                                              resizable="false" editable="false" fx:id="indexCol"/>
@@ -135,32 +146,59 @@
                                 </TableColumn>
                             </columns>
                         </TableView>
-
-
-                        <LineChart fx:id="chart3" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS">
-                            <xAxis>
-                                <NucodeNumberAxis/>
-                            </xAxis>
-                            <yAxis>
-                                <NucodeNumberAxis/>
-                            </yAxis>
-                        </LineChart>
-                    </SplitPane>
-                </VBox>
-
-            </SplitPane>
+                    </VBox>
+                </HBox>
+            </VBox>
         </Tab>
 
         <Tab text="Инверсия" closable="false">
-            <SplitPane dividerPositions="0.5" maxHeight="Infinity" maxWidth="Infinity"
-                       VBox.vgrow="ALWAYS" fx:id="Split4">
-
-                <SplitPane orientation="HORIZONTAL" dividerPositions="0.5" maxHeight="Infinity" maxWidth="Infinity"
-                           VBox.vgrow="ALWAYS" fx:id="Split5">
-                    <VBox>
+            <VBox VBox.vgrow="ALWAYS" maxHeight="Infinity">
+                <HBox VBox.vgrow="ALWAYS" maxHeight="Infinity">
+                    <VBox HBox.hgrow="ALWAYS" maxWidth="Infinity" alignment="TOP_CENTER">
+                        <HBox HBox.hgrow="ALWAYS" maxWidth="Infinity" alignment="TOP_CENTER">
+                            <VBox>
+                                <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
+                                       styleClass="chart-label" text="Сигналы"/>
+                                <SmartInterpolationMap fx:id="signalsInterpolation"
+                                                       maxWidth="400" maxHeight="400"
+                                                       minWidth="400" minHeight="400"
+                                                       legendVisible="false">
+                                    <xAxis>
+                                        <NucodeNumberAxis autoRanging="true"/>
+                                    </xAxis>
+                                    <yAxis>
+                                        <NucodeNumberAxis autoRanging="true"/>
+                                    </yAxis>
+                                </SmartInterpolationMap>
+                            </VBox>
+                            <VBox>
+                                <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
+                                       styleClass="chart-label" text="Синтетика"/>
+                                <SmartInterpolationMap maxWidth="400"
+                                                       minWidth="400"
+                                                       maxHeight="400"
+                                                       minHeight="400"
+                                                       legendVisible="false">
+                                    <xAxis>
+                                        <NucodeNumberAxis autoRanging="true"/>
+                                    </xAxis>
+                                    <yAxis>
+                                        <NucodeNumberAxis autoRanging="true"/>
+                                    </yAxis>
+                                </SmartInterpolationMap>
+                            </VBox>
+                        </HBox>
+                        <Placeholder text="Цветовая шкала"/>
+                    </VBox>
+                    <VBox alignment="TOP_CENTER">
                         <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
-                               style="-fx-text-fill: Gray" text="Сигнал"/>
-                        <SmartInterpolationMap fx:id="chart" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS">
+                               styleClass="chart-label" text="Отличие сигналов"/>
+                        <SmartInterpolationMap
+                                maxWidth="400"
+                                maxHeight="400"
+                                minWidth="400"
+                                minHeight="400"
+                                legendVisible="false">
                             <xAxis>
                                 <NucodeNumberAxis autoRanging="true"/>
                             </xAxis>
@@ -168,48 +206,50 @@
                                 <NucodeNumberAxis autoRanging="true"/>
                             </yAxis>
                         </SmartInterpolationMap>
-                        <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
-                               style="-fx-text-fill: Gray" text="Отличие сигналов"/>
-                        <ScatterChart fx:id="chart5" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS">
-                            <xAxis>
-                                <NucodeNumberAxis/>
-                            </xAxis>
-                            <yAxis>
-                                <NucodeNumberAxis/>
-                            </yAxis>
-                        </ScatterChart>
+                        <Placeholder text="Цветовая шкала"/>
                     </VBox>
-
-                </SplitPane>
-                <VBox>
-                    <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
-                           style="-fx-text-fill: Gray" text="Синтетика"/>
-                    <ScatterChart fx:id="chart6" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS">
-                        <xAxis>
-                            <NucodeNumberAxis/>
-                        </xAxis>
-                        <yAxis>
-                            <NucodeNumberAxis/>
-                        </yAxis>
-                    </ScatterChart>
-                    <Label minWidth="30" textAlignment="CENTER" alignment="CENTER" wrapText="true"
-                           style="-fx-text-fill: Gray" text="Модель"/>
-
-                    <TableView fx:id="table8" maxWidth="800" maxHeight="400" VBox.vgrow="ALWAYS"
-                               editable="true">
+                </HBox>
+                <VBox maxWidth="Infinity">
+                    <Label styleClass="chart-label">Модель</Label>
+                    <TableView>
                         <columns>
                             <TableColumn maxWidth="35" prefWidth="35" sortable="false" text="№"
                                          styleClass="centered-column"
-                                         resizable="false" editable="false" fx:id="indexCo3lq"/>
-                            <TableColumn fx:id="ab2Co33lq" sortable="false">
+                                         resizable="false" editable="false"/>
+                            <TableColumn fx:id="powerCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
+                                         sortable="false">
+                                <graphic>
+                                    <Label text="%power">
+                                        <tooltip>
+                                            <Tooltip text="%powerFull"/>
+                                        </tooltip>
+                                    </Label>
+                                </graphic>
+                            </TableColumn>
+                            <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
+                                         sortable="false">
+                                <graphic>
+                                    <Label text="%resistance">
+                                        <tooltip>
+                                            <Tooltip text="%resistanceFull"/>
+                                        </tooltip>
+                                    </Label>
+                                </graphic>
+                            </TableColumn>
+                            <TableColumn fx:id="zCol" maxWidth="Infinity" minWidth="20.0"
+                                         sortable="false" editable="false" prefWidth="100">
+                                <graphic>
+                                    <Label text="%z">
+                                        <tooltip>
+                                            <Tooltip text="%zFull"/>
+                                        </tooltip>
+                                    </Label>
+                                </graphic>
                             </TableColumn>
                         </columns>
                     </TableView>
-
-                    <Button alignment="BOTTOM_RIGHT" text="Обратная задача" fx:id="button1">
-                    </Button>
                 </VBox>
-            </SplitPane>
+            </VBox>
         </Tab>
     </TabPane>
 </VBox>
