--- a/src/main/resources/ru/nucodelabs/gem/view/controller/main/CalculateErrorScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/main/CalculateErrorScreen.fxml
@@ -19,6 +19,10 @@
                 <HBox>
                     <VBox spacing="10">
                         <Label text="Погрешность измерения" styleClass="window-header"/>
+                        <HBox spacing="5" alignment="BASELINE_LEFT">
+                            <Label>Алгоритм расчета</Label>
+                            <ComboBox fx:id="errorFormula"/>
+                        </HBox>
                         <GridPane hgap="10" vgap="5">
                             <Label text="Расстояние" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
                             <Label text="Напряжение" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
@@ -40,7 +44,6 @@
                             <Label text="mV" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
                             <Label text="mA" GridPane.rowIndex="3" GridPane.columnIndex="3"/>
                         </GridPane>
-                        <ComboBox fx:id="errorFormula" prefWidth="150.0"/>
                         <Label text="Формулы" styleClass="window-header"/>
                         <ImageView preserveRatio="true" fitHeight="55">
                             <Image url="@../../../../../../img/rhoA.png"/>
