undo/redo работает

--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -17,6 +17,10 @@
             <MenuItem text="%openProject" onAction="#loadProject"/>
             <MenuItem text="%saveProject" onAction="#saveProject"/>
         </Menu>
+        <Menu text="%edit">
+            <MenuItem text="%undo" onAction="#undo" accelerator="Shortcut+Z"/>
+            <MenuItem text="%redo" onAction="#redo" accelerator="Shift+Shortcut+Z"/>
+        </Menu>
         <Menu text="Азимут">
             <MenuItem text="Редактировать"/>
         </Menu>
