--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -34,8 +34,8 @@
                         <Label styleClass="chart-label">Карта</Label>
                         <HBox>
                             <VBox spacing="5" style="-fx-padding: 20;">
-                                <Label styleClass="uc-header">Координаты центра установки</Label>
-                                <Label>Ширина</Label>
+                                <Label styleClass="uc-header">Координаты центра установки (WGS84)</Label>
+                                <Label>Широта</Label>
                                 <TextField fx:id="centerLatitudeTf"/>
                                 <Label>Долгота</Label>
                                 <TextField fx:id="centerLongitudeTf"/>
