--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -43,14 +43,14 @@
                                 <Label styleClass="uc-header">Параметры наложения</Label>
                                 <ComboBox fx:id="mapOverlayType"/>
                             </VBox>
-                            <ImageScatterChart fx:id="signalsMap" legendVisible="false">
+                            <CombinedChart fx:id="signalsMap">
                                 <xAxis>
-                                    <NucodeNumberAxis autoRanging="true"/>
+                                    <NucodeNumberAxis fx:id="signalsMapAxisX" autoRanging="true"/>
                                 </xAxis>
                                 <yAxis>
-                                    <NucodeNumberAxis autoRanging="true"/>
+                                    <NucodeNumberAxis fx:id="signalsMapAxisY" autoRanging="true"/>
                                 </yAxis>
-                            </ImageScatterChart>
+                            </CombinedChart>
                         </HBox>
                     </VBox>
                     <VBox HBox.hgrow="ALWAYS" maxWidth="Infinity">
