--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -45,7 +45,7 @@
                                 <Label styleClass="uc-header">Параметры наложения</Label>
                                 <ComboBox fx:id="mapOverlayType"/>
                                 <Label styleClass="uc-header">Прозрачность</Label>
-                                <Slider/>
+                                <Slider fx:id="transparencySlider" max="1"/>
                             </VBox>
                             <CombinedChart fx:id="signalsMap">
                                 <xAxis>
